# inft2503-coursework

./: .gitignore  README.md
oving1/oving1a/: CMakeLists.txt  main.cpp
oving1/oving1b/: CMakeLists.txt  main.cpp
oving2/: CMakeLists.txt  main.cpp
oving3/: CMakeLists.txt  Circle.cpp  Circle.hpp  Commodity.cpp  Commodity.hpp  Sentence.cpp  Sentence.hpp  main.cpp  task1.cpp
oving4/: CMakeLists.txt  main.cpp  task1.cpp  task2.cpp  task2.h
oving5/: main.cpp
